<resources>
    <string name="app_name">Add Reminder</string>
    <string name="button_send">Enter New Event</string>
    <string name="perm_granted">Permission Granted</string>
    <string name="perm_denied">Permission Denied</string>
    <string name="build_err">Build Incompatible</string>
    <string name="perm_req">Permission Request</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="clear_button">Clear</string>
    <string name="name_hint">Enter event name</string>
    <string name="description_hint">Enter description</string>
    <string name="reminder">Reminder:</string>
</resources>
