<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="16dp"
            android:onClick="testCalendar"
            android:text="@string/button_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clear_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endtime_field" />

        <EditText
            android:id="@+id/description_field"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/description_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/name_field" />

        <EditText
            android:id="@+id/startdate_field"
            android:layout_width="134dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_field"
            tools:text="@tools:sample/date/ddmmyy" />

        <EditText
            android:id="@+id/enddate_field"
            android:layout_width="133dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startdate_field"
            tools:text="@tools:sample/date/ddmmyy" />

        <EditText
            android:id="@+id/starttime_field"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="time"
            android:numeric="integer"
            app:layout_constraintEnd_toStartOf="@+id/startdate_field"
            app:layout_constraintStart_toEndOf="@+id/start_date"
            app:layout_constraintTop_toBottomOf="@+id/description_field"
            tools:text="@tools:sample/date/hhmm" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="112dp"
            android:onClick="clear"
            android:text="@string/clear_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/send_button"
            app:layout_constraintTop_toBottomOf="@+id/enddate_field" />

        <TextView
            android:id="@+id/name"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/name"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/start_date"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/end_date"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_date" />

        <EditText
            android:id="@+id/endtime_field"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="time"
            app:layout_constraintEnd_toStartOf="@+id/enddate_field"
            app:layout_constraintStart_toEndOf="@+id/end_date"
            app:layout_constraintTop_toBottomOf="@+id/starttime_field"
            tools:text="@tools:sample/date/hhmm" />

        <TextView
            android:id="@+id/reminder"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/reminder"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_date" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reminder"
            app:layout_constraintTop_toBottomOf="@+id/endtime_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>